--- a/xr_3da/xrGame/xrGame.vcproj
+++ b/xr_3da/xrGame/xrGame.vcproj
@@ -6447,6 +6447,12 @@
 								RelativePath=".\CarCameras.cpp">
 							</File>
 							<File
+								RelativePath=".\CarDamageParticles.cpp">
+							</File>
+							<File
+								RelativePath=".\CarDamageParticles.h">
+							</File>
+							<File
 								RelativePath=".\CarDoors.cpp">
 							</File>
 							<File
