--- a/xr_3da/xrGame/xrGame.vcproj
+++ b/xr_3da/xrGame/xrGame.vcproj
@@ -8925,6 +8925,12 @@
 					Name="MainIngame"
 					Filter="">
 					<File
+						RelativePath=".\ui\UICarPanel.cpp">
+					</File>
+					<File
+						RelativePath=".\ui\UICarPanel.h">
+					</File>
+					<File
 						RelativePath=".\UIHealth.cpp">
 					</File>
 					<File
