--- a/xr_3da/xrGame/xrGame.vcproj
+++ b/xr_3da/xrGame/xrGame.vcproj
@@ -5354,6 +5354,19 @@
 							RelativePath=".\client_spawn_manager_script.cpp">
 						</File>
 					</Filter>
+					<Filter
+						Name="AutosaveManager"
+						Filter="">
+						<File
+							RelativePath=".\autosave_manager.cpp">
+						</File>
+						<File
+							RelativePath=".\autosave_manager.h">
+						</File>
+						<File
+							RelativePath=".\autosave_manager_inline.h">
+						</File>
+					</Filter>
 				</Filter>
 				<Filter
 					Name="Cameras"
