--- a/xr_3da/xrGame/xrGame.vcproj
+++ b/xr_3da/xrGame/xrGame.vcproj
@@ -9596,6 +9596,9 @@
 				RelativePath=".\notes.txt">
 			</File>
 			<File
+				RelativePath=".\postprocess.ltx">
+			</File>
+			<File
 				RelativePath=".\Shedule.txt">
 			</File>
 			<File
